# open-domain-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  config.yaml  harness.md  init.sh  pyproject.toml
docs/: adding-middleware.md  adding-recovery.md  adding-tools.md  architecture.md  harness-design.md  testing-guide.md
docs/code_review/: review0513.md  review0513_1.md
plans/: 01-register-all-4-new-tools.md  02-harden-docker-sandbox.md  03-block-symlink-traversal.md  04-fix-tool-safety-declarations.md  05-output-validation-always-runs.md  06-read-only-tool-result-caching.md  07-parallel-tool-execution.md  08-runtimememory-manages-tool-messages.md  09-provider-hardening.md  10-async-hitl-approval.md  11-final-answer-summary.md  12-feedback-loop-via-profile-memory.md  13-conversation-persistence-sqlite.md  14-async-cli-input.md  15-streaming-output.md  16-cost-tracking.md  17-prompt-caching.md  18-task-cancellation.md  19-eval-runner.md  INDEX.md  status.json
prd/: 01-bug-fixes-and-harness-hardening.md  02-PRD-eval-system-and-testing.md  03-trace-and-eval-overhaul.md  04-storage-consolidation.md  05-fast-path-simple-requests.md  06-codebase-health-and-dead-code-cleanup.md
tests/: conftest.py  test_agent.py  test_async_cli_input.py  test_boundary_cancellation_react_deepseek.py  test_bugfix_streaming_toolcalls_deepseek_url.py  test_checkpoint.py  test_checkpoint_integration.py  test_checkpoint_sqlite_default.py  test_cli_skill_list.py  test_cli_token_display.py  test_cli_verbose_debug.py  test_config_retention.py  test_conversation_persistence.py  test_cost_tracking.py  test_docker_hardening.py  test_docker_restore.py  test_e2e.py  test_e2e_live.py  test_eval.py  test_eval_path_b.py  test_eval_persistence.py  test_eval_results_jsonl.py  test_eval_runner.py  test_eval_runtime_integration.py  test_eval_spans.py  test_eval_trajectories_jsonl.py  test_eval_trend.py  test_fast_path.py  test_feedback_loop_profile.py  test_final_answer_summary.py  test_harness.py  test_hooks.py  test_layered_memory.py  test_llmjudge.py  test_mcp.py  test_memory.py  test_memory_spans.py  test_metrics_trajectory.py  test_middleware_chain.py  test_monitoring.py  (+44 more)
(+342 files in other folders)
