[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agent"
version = "0.1.0"
description = "An open-domain agent framework built on Harness Engineering principles"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
deepseek = ["openai>=1.0"]
docker = ["docker>=6.0"]
daytona = ["daytona-sdk>=0.1"]

[project.scripts]
agent = "open_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/open_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
