[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agent"
version = "0.1.0"
description = "An open-domain agent framework built on Harness Engineering principles"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "duckduckgo-search>=4.0",
    "markdownify>=0.11",
    "tenacity>=8.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
deepseek = ["openai>=1.0"]
docker = ["docker>=6.0"]
daytona = ["daytona-sdk>=0.1"]

[project.scripts]
agent = "open_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/open_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests as live E2E (requires API key)",
    "slow: marks tests as slow (integration tests, real API calls)",
    "integration: marks tests that require external services",
    "unit: marks tests as fast unit tests (no external deps)",
]

[tool.coverage.run]
source = ["open_agent"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
